# tauri-axum

./: .gitignore  Cargo.toml  LICENSE.md  index.js  package-lock.json  package.json  readme.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: verify-axum-app.yml  verify-tauri-app.yml  verify-tauri-axum-htmx.yml
example/: Cargo.toml
example/axum-app/: Cargo.toml
example/axum-app/src/: routes.rs  styles.css
example/tauri-app/src/: index.html  main.js
example/tauri-app/src-tauri/: Cargo.toml
example/tauri-app/src-tauri/src/: lib.rs
scripts/: copy-paste-xhr-fetch-proxy.js
src/: lib.rs
