[package]
name = "tauri-axum-htmx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tower-service = "0.3.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2", features = [] }
tower-service = "0.3.3"

