[package]
name = "tauri-axum-htmx"
version = "0.1.0"
edition = "2021"
authors = ["Logan Keenan"] 
description = "Build interactive UIs in Tauri applications using HTMX and Axum, enabling server-side rendering patterns by running the Axum app in the Tauri backend."
license = "MIT"
repository = "https://github.com/logankeenan/tauri-axum-htmx"
include = [
    "src/**/*",
    "readme.md",
    "LICENSE.md"
]

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
tower-service = "0.3.3"

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
serde_json = "1.0"
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tauri = { version = "2", features = [] }
tower-service = "0.3.3"

